# xi_curvature_invariant

./: README.md
xi_curvature_invariant/: LICENSE  README.md  pyproject.toml  requirements.txt
xi_curvature_invariant/results/: k0_values.txt
xi_curvature_invariant/scripts/: compute_k0.py  plot_curvature_scan.py  run_canonicality_tests.py
xi_curvature_invariant/tests/: test_core.py
xi_curvature_invariant/xi_curvature/: __init__.py  core.py  scans.py
