[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xi-curvature-invariant"
version = "0.1.0"
description = "Numerical tools for studying a canonical curvature invariant of the completed Riemann Xi-function."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Buddhika Weerasooriya" }]
license = { text = "MIT" }
dependencies = [
    "mpmath>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0"
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["xi_curvature*"]
